--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "homepage": "https://www.dxw.com"
         },
         {
-            "name: "Jeff Karney",
+            "name": "Jeff Karney",
             "email": "jeff.karney@gmail.com"
         }
     ],
