move script command to package composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
             "email": "jeff.karney@gmail.com"
         }
     ],
-    "bin": ["bin/phar-install"]
+    "bin": ["bin/phar-install"],
+    "scripts": {
+        "post-update-cmd": "vendor/bin/phar-install"
+    }
 }
